Vishnu, Ashok | #113 | Added few Tests and MappingsReader now takes mulitple files